--- a/templates/actors/mongo.j2
+++ b/templates/actors/mongo.j2
@@ -36,4 +36,4 @@ spec:
       volumes:
       - name: actors-mongo-data
         persistentVolumeClaim:
-          claimName: actors-mongo-vol01
+          claimName: actors-mongo-vol{{local_param["volume_number"]|default(service_param["volume_number"]|default(universal_param["volume_number"]|default("01")))}}
