--- a/templates/actors/rabbit.j2
+++ b/templates/actors/rabbit.j2
@@ -38,5 +38,5 @@ spec:
       volumes:
       - name: actors-rabbitmq-data
         persistentVolumeClaim:
-          claimName: actors-rabbitmq-vol01
+          claimName: actors-rabbitmq-vol{{local_param["volume_number"]|default(service_param["volume_number"]|default(universal_param["volume_number"]|default("01")))}}
 
