--- a/templates/authenticator/postgres/pvc.j2
+++ b/templates/authenticator/postgres/pvc.j2
@@ -1,7 +1,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: authenticator-postgres-vol01
+  name: authenticator-postgres-vol{{local_param["volume_number"]|default(service_param["volume_number"]|default(universal_param["volume_number"]|default("01")))}}
 spec:
   accessModes:
     - ReadWriteOnce
@@ -33,7 +33,7 @@ spec:
      volumes:
      - name: authenticator-pg-data
        persistentVolumeClaim:
-         claimName: authenticator-postgres-vol01
+         claimName: authenticator-postgres-vol{{local_param["volume_number"]|default(service_param["volume_number"]|default(universal_param["volume_number"]|default("01")))}}
 
 ---
 apiVersion: batch/v1
@@ -59,5 +59,5 @@ spec:
      volumes:
      - name: authenticator-pg-data
        persistentVolumeClaim:
-         claimName: authenticator-postgres-vol01
+         claimName: authenticator-postgres-vol{{local_param["volume_number"]|default(service_param["volume_number"]|default(universal_param["volume_number"]|default("01")))}}
 {%endif%}
