--- a/templates/jobs/postgres/pvc.j2
+++ b/templates/jobs/postgres/pvc.j2
@@ -1,7 +1,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: jobs-postgres-vol01
+  name: jobs-postgres-vol{{local_param["volume_number"]|default(service_param["volume_number"]|default(universal_param["volume_number"]|default("01")))}}
 spec:
   accessModes:
     - ReadWriteOnce
@@ -33,7 +33,7 @@ spec:
 #      volumes:
 #      - name: jobs-pg-data
 #        persistentVolumeClaim:
-#          claimName: jobs-postgres-vol01
+#          claimName: jobs-postgres-vol{{local_param["volume_number"]|default(service_param["volume_number"]|default(universal_param["volume_number"]|default("01")))}}
 #
 #---
 #apiVersion: batch/v1
@@ -59,5 +59,5 @@ spec:
 #      volumes:
 #      - name: jobs-pg-data
 #        persistentVolumeClaim:
-#          claimName: jobs-postgres-vol01
+#          claimName: jobs-postgres-vol{{local_param["volume_number"]|default(service_param["volume_number"]|default(universal_param["volume_number"]|default("01")))}}
 #
