--- a/templates/monitoring/stern/deploy.j2
+++ b/templates/monitoring/stern/deploy.j2
@@ -45,4 +45,4 @@ spec:
           name: kubeconfig
       - name: stern-data
         persistentVolumeClaim:
-          claimName: stern-data-vol01
+          claimName: stern-data-vol{{local_param["volume_number"]|default(service_param["volume_number"]|default(universal_param["volume_number"]|default("01")))}}
