--- a/templates/tenants-api/postgres/pvc.j2
+++ b/templates/tenants-api/postgres/pvc.j2
@@ -1,7 +1,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: tenants-postgres-vol01
+  name: tenants-postgres-vol{{local_param["volume_number"]|default(service_param["volume_number"]|default(universal_param["volume_number"]|default("01")))}}
 spec:
   accessModes:
     - ReadWriteOnce
