--- a/templates/vault/vault-auto-unseal.j2
+++ b/templates/vault/vault-auto-unseal.j2
@@ -25,6 +25,21 @@ spec:
         env:
         - name: VAULT_ADDR
           value: http://127.0.0.1:8200
+        - name: UNSEAL1
+          valueFrom:
+            secretKeyRef:
+              name: vault-keys
+              key: UNSEAL1
+        - name: UNSEAL2
+          valueFrom:
+            secretKeyRef:
+              name: vault-keys
+              key: UNSEAL2
+        - name: UNSEAL3
+          valueFrom:
+            secretKeyRef:
+              name: vault-keys
+              key: UNSEAL3
         volumeMounts:
 #        - name: defaultconf
 #          mountPath: /etc/nginx/conf.d/default.conf
@@ -33,6 +48,13 @@ spec:
           subPath: vault.hcl
         - name: vault-data
           mountPath: "/vault/data"
+        lifecycle:
+          postStart:
+            exec:
+              command:
+              - sh
+              - -c
+              - vault status; rc=$?; if [ ${rc} -eq 2 ]; then vault operator unseal $UNSEAL1 ; vault operator unseal $UNSEAL2 ; vault operator unseal $UNSEAL3; fi
       volumes:
 #      - name: defaultconf
 #        configMap:
@@ -42,6 +64,6 @@ spec:
           name: vaultconf
       - name: vault-data
         persistentVolumeClaim:
-          claimName: vault-vol01
+          claimName: vault-vol{{local_param["volume_number"]|default(service_param["volume_number"]|default(universal_param["volume_number"]|default("01")))}}
 
 
