--- a/templates/streams/kapacitor/pvc.j2
+++ b/templates/streams/kapacitor/pvc.j2
@@ -1,7 +1,8 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: streams-kapacitor-vol01
+  name: {{local_param["volume_name"]|default("streams-kapacitor-vol01")}}
+
 spec:
   accessModes:
     - ReadWriteOnce
@@ -34,4 +35,5 @@ spec:
       volumes:
       - name: streams-kapacitor-data
         persistentVolumeClaim:
-          claimName: streams-kapacitor-vol01
+          claimName: {{local_param["volume_name"]|default("streams-kapacitor-vol01")}}
+
