--- a/templates/tokens-api/tokens-config.j2
+++ b/templates/tokens-api/tokens-config.j2
@@ -5,7 +5,7 @@ metadata:
 data:
   tokens-config.json: |-
     {
-      "primary_site_admin_tenant_base_url": "{{universal_param["service_url"]}}",
+      "service_tenant_base_url": "{{universal_param["service_url"]}}",
       "service_site_id": "{{universal_param["service_site_id"]}}",
       "service_tenant_id": "{{universal_param["service_tenant_id"]}}",
       "service_name": "{{service_param["service_name"]}}",
