--- a/templates/monitoring/stern/pvc.j2
+++ b/templates/monitoring/stern/pvc.j2
@@ -1,7 +1,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: stern-data-vol{{local_param["volume_number"]|default(service_param["volume_number"]|default(universal_param["volume_number"]|default("01")))}}
+  name: {{local_param["volume_name"]|default("stern-data-vol01")}}
 spec:
   accessModes:
     - ReadWriteOnce
