--- a/templates/meta/mongo/deploy.j2
+++ b/templates/meta/mongo/deploy.j2
@@ -32,4 +32,4 @@ spec:
       volumes:
         - name: restheart-mongo-data
           persistentVolumeClaim:
-            claimName: restheart-mongo-vol{{local_param["volume_number"]|default(service_param["volume_number"]|default(universal_param["volume_number"]|default("01")))}}
+            claimName: {{service_param["restheart_mongo_pvc"]|default(defaults["restheart_mongo_pvc"])}}
