--- a/templates/monitoring/pvc/grafana-pvc.j2
+++ b/templates/monitoring/pvc/grafana-pvc.j2
@@ -2,11 +2,11 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{local_param["volume_name"]|default("grafana-vol01")}}
+  name: {{service_param["grafana_pvc"]|default(defaults["grafana_pvc"])}}
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: {{universal_param["storage_class"]|default("rbd-new")}}
+  storageClassName: {{universal_param["storage_class"]}}
   resources:
     requests:
       storage: 20Gi
