--- a/templates/vault/vault-auto-unseal.j2
+++ b/templates/vault/vault-auto-unseal.j2
@@ -64,6 +64,6 @@ spec:
           name: vaultconf
       - name: vault-data
         persistentVolumeClaim:
-          claimName: vault-vol{{local_param["volume_number"]|default(service_param["volume_number"]|default(universal_param["volume_number"]|default("01")))}}
+          claimName: {{service_param["pvc"]|default(defaults["pvc"])}}
 
 
