--- a/templates/authenticator/postgres/deploy.j2
+++ b/templates/authenticator/postgres/deploy.j2
@@ -35,5 +35,5 @@ spec:
       volumes:
       - name: authenticator-pg-data
         persistentVolumeClaim:
-          claimName: authenticator-postgres-vol{{local_param["volume_number"]|default(service_param["volume_number"]|default(universal_param["volume_number"]|default("01")))}}
+          claimName: {{service_param["postgres_pvc"]|default(defaults["postgres_pvc"])}}
 
