--- a/templates/jobs/api/migrate.j2
+++ b/templates/jobs/api/migrate.j2
@@ -11,7 +11,7 @@ spec:
       restartPolicy: Never
       containers:
       - name: jobs-migrate
-        image: tapis/jobsmigrate:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]|default("dev")))}}
+        image: tapis/jobsmigrate:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]|default(defaults["image_version"])))}}
         imagePullPolicy: Always
         {% if local_param["memory"]%}
         resources:
