--- a/templates/jobs/rabbitmq/deploy.j2
+++ b/templates/jobs/rabbitmq/deploy.j2
@@ -40,4 +40,4 @@ spec:
       volumes:
       - name: jobs-rabbitmq-data
         persistentVolumeClaim:
-          claimName: jobs-rabbitmq-vol{{local_param["volume_number"]|default(service_param["volume_number"]|default(universal_param["volume_number"]|default("01")))}}
+          claimName: {{service_param["rabbitmq_pvc"]|default(defaults["rabbitmq_pvc"])}}
