--- a/templates/meta/backup/mongo-backup-claim0-pvc.j2
+++ b/templates/meta/backup/mongo-backup-claim0-pvc.j2
@@ -5,7 +5,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: {{universal_param["storage_class"]|default("rbd-new")}}
+  storageClassName: {{universal_param["storage_class"]}}
   resources:
     requests:
       storage: 10Gi
