--- a/templates/monitoring/stern/deploy.j2
+++ b/templates/monitoring/stern/deploy.j2
@@ -45,4 +45,4 @@ spec:
           name: kubeconfig
       - name: stern-data
         persistentVolumeClaim:
-          claimName: {{local_param["volume_name"]|default("stern-data-vol01")}}
+          claimName: {{service_param["stern_pvc"]|default(defaults["stern_pvc"])}}
