--- a/templates/notifications/workers.j2
+++ b/templates/notifications/workers.j2
@@ -55,7 +55,7 @@ spec:
                 secretKeyRef:
                   name: tapis-notifications-secrets
                   key: service-password
-          image: tapis/tapis-notifications-workers:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]|default("dev")))}}
+          image: tapis/tapis-notifications-workers:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]|default(defaults["image_version"])))}}
           imagePullPolicy: Always
           name: notifications-workers
           resources: {}
