--- a/templates/pgrest/yml/postgres-deploy.j2
+++ b/templates/pgrest/yml/postgres-deploy.j2
@@ -35,4 +35,4 @@ spec:
       volumes:
       - name: pgrest-data
         persistentVolumeClaim:
-          claimName: pgrest-postgres-vol{{local_param["volume_number"]|default(service_param["volume_number"]|default(universal_param["volume_number"]|default("01")))}}
+          claimName: {{service_param["postgres_pvc"]|default(defaults["postgres_pvc"])}}
