--- a/templates/security-kernel/postgres/pvc.j2
+++ b/templates/security-kernel/postgres/pvc.j2
@@ -1,11 +1,11 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: sk-postgres-vol{{local_param["volume_number"]|default(service_param["volume_number"]|default(universal_param["volume_number"]|default("01")))}}
+  name: {{service_param["postgres_pvc"]|default(defaults["postgres_pvc"])}}
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: {{universal_param["storage_class"]|default("rbd-new")}}
+  storageClassName: {{universal_param["storage_class"]}}
   resources:
     requests:
       storage: 20Gi
@@ -33,7 +33,7 @@ spec:
 #      volumes:
 #      - name: sk-pg-data
 #        persistentVolumeClaim:
-#          claimName: sk-postgres-vol{{local_param["volume_number"]|default(service_param["volume_number"]|default(universal_param["volume_number"]|default("01")))}}
+#          claimName: {{service_param["postgres_pvc"]|default(defaults["postgres_pvc"])}}
 #
 #---
 #apiVersion: batch/v1
@@ -59,5 +59,5 @@ spec:
 #      volumes:
 #      - name: sk-pg-data
 #        persistentVolumeClaim:
-#          claimName: sk-postgres-vol{{local_param["volume_number"]|default(service_param["volume_number"]|default(universal_param["volume_number"]|default("01")))}}
+#          claimName: {{service_param["postgres_pvc"]|default(defaults["postgres_pvc"])}}
 #
