--- a/templates/streams/influx/pvc.j2
+++ b/templates/streams/influx/pvc.j2
@@ -1,11 +1,11 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: influx-vol{{local_param["volume_number"]|default(service_param["volume_number"]|default(universal_param["volume_number"]|default("01")))}}
+  name: {{service_param["influx_pvc"]|default(defaults["influx_pvc"])}}
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: {{universal_param["storage_class"]|default("rbd-new")}}
+  storageClassName: {{universal_param["storage_class"]}}
   resources:
     requests:
       storage: 200Gi
@@ -34,5 +34,5 @@ spec:
 #      volumes:
 #      - name: pg-data
 #        persistentVolumeClaim:
-#          claimName: postgres-vol{{local_param["volume_number"]|default(service_param["volume_number"]|default(universal_param["volume_number"]|default("01")))}}
+#          claimName: {{service_param["postgres_pvc"]|default(defaults["postgres_pvc"])}}
 #
