--- a/templates/systems/api/api.j2
+++ b/templates/systems/api/api.j2
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: systems-api
-        image: tapis/systems:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]|default("dev")))}}
+        image: tapis/systems:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]|default(defaults["image_version"])))}}
         imagePullPolicy: Always
         {% if local_param["memory"]%}
         resources:
