--- a/templates/tenants-api/api/api.j2
+++ b/templates/tenants-api/api/api.j2
@@ -13,8 +13,8 @@ spec:
     spec:
       containers:
       - name: tenants-api
-        image: tapis/tenants-api:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]|default("latest")))}}
-        imagePullPolicy: {{local_param["image_pull"]|default(service_param["image_pull"]|default(universal_param["image_pull"]|default("Always")))}}
+        image: tapis/tenants-api:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]|default(defaults["image_version"])))}}
+        imagePullPolicy: {{local_param["image_pull"]|default(service_param["image_pull"]|default(universal_param["image_pull"]|default(defaults["image_pull"])))}}
         ports:
         - name: http
           containerPort: 5000
