--- a/templates/tenants-api/postgres/deploy.j2
+++ b/templates/tenants-api/postgres/deploy.j2
@@ -35,4 +35,4 @@ spec:
       volumes:
       - name: tenants-pg-data
         persistentVolumeClaim:
-          claimName: tenants-postgres-vol{{local_param["volume_number"]|default(service_param["volume_number"]|default(universal_param["volume_number"]|default("01")))}}
+          claimName: {{service_param["postgres_pvc"]|default(defaults["postgres_pvc"])}}
