--- a/templates/tokens-api/api.j2
+++ b/templates/tokens-api/api.j2
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: tokens-api
-        image: tapis/tokens-api:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]|default("dev")))}}
+        image: tapis/tokens-api:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]|default(defaults["image_version"])))}}
         imagePullPolicy: Always
         ports:
         - name: http
