--- a/templates/vault/vault-init.j2
+++ b/templates/vault/vault-init.j2
@@ -42,6 +42,6 @@ spec:
           name: vaultconf
       - name: vault-data
         persistentVolumeClaim:
-          claimName: vault-vol{{local_param["volume_number"]|default(service_param["volume_number"]|default(universal_param["volume_number"]|default("01")))}}
+          claimName: {{service_param["pvc"]|default(defaults["pvc"])}}
 
 
