--- a/templates/actors/api/metrics.j2
+++ b/templates/actors/api/metrics.j2
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: actors-metrics
-        image: abaco/core-v3:latest
+        image: abaco/core-v3:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]|default(defaults["image_version"])))}}
         ports:
         - name: flask
           containerPort: 5000
