--- a/templates/vault/vault-auto-unseal.j2
+++ b/templates/vault/vault-auto-unseal.j2
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: vault
-        image: vault
+        image: vault:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]|default(defaults["image_version"])))}}
         command: ['vault','server','-config=/vault/config']
         ports:
         - name: vault
