--- a/templates/pgrest/pgrest-config.j2
+++ b/templates/pgrest/pgrest-config.j2
@@ -3,7 +3,25 @@ kind: ConfigMap
 metadata: 
   name: pgrest-config
 data:
-  "service_site_url": "{{universal_param["service_url"]}}"
-  "service_tenant_id": "{{universal_param["service_tenant_id"]}}"
-  "site_id": "{{universal_param["service_site_id"]}}"
-  "service_name": "{{service_param["service_name"]}}"
+  pgrest-config.json: |-
+    {
+      "service_site_url": "{{universal_param["service_url"]}}",
+      "service_tenant_id": "{{universal_param["service_tenant_id"]}}",
+      "site_id": "{{universal_param["service_site_id"]}}",
+      "service_name": "{{service_param["service_name"]}}",
+      "service_tenant_base_url": "{{universal_param["service_url"]}}",
+      "tenants": {{universal_param["tenants"]|default(["dev", "admin"])|tojson}},
+      "log_level": "DEBUG",
+      "show_traceback": false,
+      "databases": {
+        "default": {
+          "NAME": "pgrestdb",
+          "USER": "pgrest",
+          "PASSWORD": "$env{K8-POSTGRES-PASSWORD}",
+          "HOST": "pgrest-postgres",
+          "PORT": 5432,
+          "ENGINE": "django_tenants.postgresql_backend"
+        }
+      }
+    }
+
