Edited configmap refernce

--- a/templates/pgrest/yml/api-deploy.j2
+++ b/templates/pgrest/yml/api-deploy.j2
@@ -62,7 +62,7 @@ spec:
       volumes:
       - name: pgrest-config
         configMap: 
-          name: global-config
+          name: pgrest-config
       - name: tapis-pgrest-secrets
         secret:
           secretName: tapis-pgrest-secrets
